Added multithreading - Mixer creates producer consumer relations: picks a random producer, and then a random consumer to free the memory allocated in the producer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ add_executable(memsetVsMadvise memsetVsMadvise.cpp)
 set_property(TARGET memsetVsMadvise PROPERTY CXX_STANDARD 11)
 target_link_libraries(memsetVsMadvise PRIVATE ${CMAKE_THREAD_LIBS_INIT} gflags)
 
-add_executable(stress stress_test/Main.cpp stress_test/Producers.cpp stress_test/Mixer.cpp)
+add_executable(stress stress_test/Main.cpp stress_test/Producers.cpp stress_test/Mixer.cpp stress_test/ToFreeQueue.cpp)
 set_property(TARGET stress PROPERTY CXX_STANDARD 14)
 target_link_libraries(stress PRIVATE gflags)
